# YIoT

./: .gitignore  .gitmodules  CMakeLists.txt  transitive-args.cmake
app/: CMakeLists.txt
app/qt/: CMakeLists.txt  dmg.json
app/qt/cmake/: macdeploy.cmake
app/qt/cmake/iotkit-qt/: CMakeLists.txt
app/qt/include/: KSActiveDevice.h  KSQActiveDevicesEnumerator.h  KSQApplication.h  KSQBLEController.h  KSQWiFiEnumerator.h  KSWiFi.h
app/qt/include/android/: KSQAndroid.h
app/qt/include/devices/: KSQControllerBase.h  KSQDeviceBase.h  KSQDevices.h
app/qt/include/devices/lamp/: KSQLamp.h  KSQLampController.h
app/qt/include/devices/lamp/mono/: KSQLampMonoController.h
app/qt/include/devices/pc/: KSQPC.h  KSQPCController.h
app/qt/include/macos/: KSMacWiFi.h
app/qt/include/win/: KSWinWiFi.h
app/qt/platform/macos/: macos-info.plist.in
app/qt/src/: KSQActiveDevicesEnumerator.cpp  KSQApplication.cpp  KSQBLEController.cpp  KSQWiFiEnumerator.cpp  iotkit-hal.cpp  main.cpp  resources.qrc
app/qt/src/android/: KSQAndroid.cpp
app/qt/src/devices/: KSQDevices.cpp
app/qt/src/devices/lamp/: KSQLamp.cpp  KSQLampController.cpp
app/qt/src/devices/lamp/mono/: KSQLampMonoController.cpp
app/qt/src/devices/pc/: KSQPC.cpp  KSQPCController.cpp
app/qt/src/macos/: KSMacWiFi.mm
app/qt/src/qml/: BLEDevicesPage.qml  BLEManager.qml  InitDialog.qml  Main.qml  Provision.qml  WiFiManager.qml
app/qt/src/qml/components/: BleDevicesList.qml  CollapsibleList.qml  DevicesList.qml  Form.qml  Header.qml  InfoText.qml  LeftSideMenu.qml  SettingsMenuList.qml  SettingsStorage.qml  WiFiDevicesList.qml  WiFiNetworksList.qml
app/qt/src/qml/components/CollapsibleList/: CollapsibleList.qml  CollapsibleListCategory.qml  CollapsibleListSubItem.qml
app/qt/src/qml/components/devices/: AllDevicesList.qml  DeviceInfoPopup.qml  DevicesListItem.qml  GeneralCategoryControls.qml  GeneralDeviceControls.qml
app/qt/src/qml/components/devices/lamp/: LampCategoryControls.qml  LampControls.qml
app/qt/src/qml/pages/: AboutPage.qml  CredLoadPage.qml  DevicesPage.qml  DevicesSetupPage.qml  LeftSideMenu.qml  QRReaderPage.qml  SettingsPage.qml  SharePage.qml
app/qt/src/qml/pages/devices/lamp/mono/: LampMono.qml  LampMonoControl.qml
app/qt/src/qml/pages/settings/: EventsSettingsPage.qml  SettingsMenuPage.qml  WiFiPasswordPage.qml  WiFiSettingsPage.qml
app/qt/src/qml/theme/: Theme.qml
app/qt/src/win/: KSWinWiFi.cpp
cmake/: deployers.cmake  vsplatforms.cmake
common/protocols/snap/: CMakeLists.txt
common/protocols/snap/include/lamp/: lamp-private.h  lamp-server.h  lamp-structs.h
common/protocols/snap/src/lamp/: lamp-client.c  lamp-server.c
controll-app/: CMakeLists.txt
controll-app/cmake/iotkit-qt/: CMakeLists.txt
controll-app/include/: KSQApplication.h  KSQBLEController.h  KSQWiFiEnumerator.h  KSWiFi.h
controll-app/include/android/: KSQAndroid.h
controll-app/include/devices/: KSQControllerBase.h  KSQDeviceBase.h  KSQDevices.h
controll-app/include/devices/lamp/: KSQLamp.h  KSQLampController.h
controll-app/include/devices/pc/: KSQPC.h  KSQPCController.h
controll-app/include/protocols/snap/: KSQSnapLampClient.h
controll-app/include/yiot-iotkit/: KSQIoTKitFacade.h
controll-app/include/yiot-iotkit/netif/: KSQUdp.h
controll-app/include/yiot-iotkit/snap/: KSQSnapLampClient.h
controll-app/src/: KSQApplication.cpp  KSQBLEController.cpp  KSQWiFiEnumerator.cpp  iotkit-hal.cpp  main.cpp  resources.qrc
controll-app/src/android/: KSQAndroid.cpp
controll-app/src/devices/: KSQDevices.cpp
controll-app/src/devices/lamp/: KSQLamp.cpp  KSQLampController.cpp
controll-app/src/devices/pc/: KSQPC.cpp  KSQPCController.cpp
controll-app/src/macos/: KSMacWiFi.mm
controll-app/src/protocols/snap/: KSQSnapLampClient.cpp  VSQSnapLampClient.cpp
controll-app/src/qml/: Main.qml
controll-app/src/qml/components/: InfoText.qml  SettingsStorage.qml  WiFiNetworksList.qml
controll-app/src/qml/components/devices/: AllDevicesList.qml  DeviceInfoPopup.qml  DevicesListItem.qml  GeneralCategoryControls.qml  GeneralDeviceControls.qml
controll-app/src/qml/components/devices/lamp/: LampControls.qml
controll-app/src/qml/pages/: AboutPage.qml  CredLoadPage.qml  DevicesPage.qml  DevicesSetupPage.qml  LeftSideMenu.qml  QRReaderPage.qml  SettingsPage.qml  SharePage.qml
controll-app/src/qml/pages/settings/: EventsSettingsPage.qml  SettingsMenuPage.qml  WiFiPasswordPage.qml  WiFiSettingsPage.qml
controll-app/src/win/: KSWinWiFi.cpp
controll-app/src/yiot-iotkit/: KSQIoTKitFacade.cpp
device/: CMakeLists.txt
device-app/: CMakeLists.txt
device-app/main/: CMakeLists.txt
device-app/main/esp32/idf/: CMakeLists.txt
device-app/main/esp32/idf/src/: main.c
device-app/main/linux/: CMakeLists.txt
device-app/main/linux/include/: device-info.h  wifi-cred.h
device-app/main/linux/include/iotkit-impl/: init.h
device-app/main/linux/include/iotkit-impl/netif/: netif-ble-linux.h
device-app/main/linux/scripts/: mgmt-services.sh
device-app/main/linux/src/: device-info.c  main.c  wifi-cred.c
device-app/main/linux/src/iotkit-impl/: helpers.c  init.c
device-app/main/linux/src/iotkit-impl/netif/: netif-ble-linux.cpp
device-app/provision/: CMakeLists.txt
device/control-app/: CMakeLists.txt
device/control-app/esp32/idf/: platformio.ini
device/control-app/esp32/idf/src/: main.c  sdkconfig
device/control-app/linux/: CMakeLists.txt
device/control-app/linux/src/: device-info.c  main.c  wifi-cred.c
device/secure-provision/: CMakeLists.txt
scripts/helpers/: png1024toicns.sh
service/linux/: CMakeLists.txt
service/linux/include/: device-info.h  wifi-cred.h
service/linux/include/ble/: ble-linux.h  gatt_dbus.h
service/linux/include/iotkit-impl/: init.h
service/linux/src/: device-info.c  main.c
service/linux/src/ble/: ble-linux.c  bluez-glue.c  bluez-glue.h  objmanager-glue.c  objmanager-glue.h
service/linux/src/ble/data/: com.kutashenko.gatt.service.conf.in
service/linux/src/iotkit-impl/: init.c
service/linux/src/iotkit-impl/netif/: netif-ble-linux.c  netif-ble-linux.cpp
(+3 files in other folders)
