#  ────────────────────────────────────────────────────────────
#                  ───╔╗──╔╗─╔══╗──────╔════╗───
#                  ───║╚╗╔╝║─╚╣╠╝──────║╔╗╔╗║───
#                  ───╚╗╚╝╔╝──║║──╔══╗─╚╝║║╚╝───
#                  ────╚╗╔╝───║║──║╔╗║───║║─────
#                  ─────║║───╔╣╠╗─║╚╝║───║║─────
#                  ─────╚╝───╚══╝─╚══╝───╚╝─────
#  ──╔╗╔═╗────────────────────╔╗─────────────────────╔╗────────
#  ──║║║╔╝───────────────────╔╝╚╗────────────────────║║────────
#  ──║╚╝╝──╔══╗─╔══╗─╔══╗──╔╗╚╗╔╝──╔══╗─╔╗─╔╗╔╗─╔══╗─║║──╔══╗──
#  ──║╔╗║──║║═╣─║║═╣─║╔╗║──╠╣─║║───║─═╣─╠╣─║╚╝║─║╔╗║─║║──║║═╣──
#  ──║║║╚╗─║║═╣─║║═╣─║╚╝║──║║─║╚╗──╠═─║─║║─║║║║─║╚╝║─║╚╗─║║═╣──
#  ──╚╝╚═╝─╚══╝─╚══╝─║╔═╝──╚╝─╚═╝──╚══╝─╚╝─╚╩╩╝─║╔═╝─╚═╝─╚══╝──
#  ──────────────────║║─────────────────────────║║─────────────
#  ──────────────────╚╝─────────────────────────╚╝─────────────
#
#    Lead Maintainer: Roman Kutashenko <kutashenko@gmail.com>
#  ────────────────────────────────────────────────────────────

cmake_minimum_required(VERSION 3.11 FATAL_ERROR)

project(ble-provision-service VERSION 0.1.0 LANGUAGES C)

#
#	Linux app
#
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/linux)
